[package]
name = "core-storage-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["default", "stream"] }
scienceobjectsdb_rust_api = "0.2.0-rc1"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs"] }
tonic = { version = "0.6", features = ["tls", "tls-roots"] }
